--- a/ZeroHunger/Views/User/Index.cshtml
+++ b/ZeroHunger/Views/User/Index.cshtml
@@ -10,52 +10,88 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
-</head>
+  @*  <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f2f2f2;
+            display: flex;
+            justify-content: space-between;
+        }
 
+        .login-container {
+            background-color: white;
+            opacity: 0.9;
+            margin-top: 50px;
+            padding: 20px;
+            border-radius: 10px;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .background-image {
+            flex: 1;
+              background-image: url('@Url.Content("~/Image/Login_img.jpg")');
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+
+        /* Add more styling as needed */
+
+    </style>*@
+</head>
 
 <body>
 
-    <h2>Login</h2>
 
-    @using (Html.BeginForm("Index", "User","Restaurant", FormMethod.Post))
-    {
-        @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <h4>Login</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <div style="margin-top:25px">
+       
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div>
-                <input type="submit" class=" btn btn-success" value="Login" />
-            </div>
+        <div class="col-lg-6"  style="margin-top:5px">
+            <img height="560px"  width="500px" src="~/Image/Login_img.jpg" />
         </div>
-    }
 
-    <div>
-        <br />
-        @Html.ActionLink("Sign Up", "SignUp", null, new { @class = "btn btn-success" })
+        @using (Html.BeginForm("Index", "User", "Restaurant", FormMethod.Post))
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-horizontal col-lg-6">
+                <h4>Login</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+                <div>
+                    <input type="submit" class=" btn btn-success" value="Login" />
+                </div>
+
+                <div>
+                    <br />
+                    @Html.ActionLink("Sign Up", "SignUp", null, new { @class = "btn btn-success" })
+                </div>
+            </div>
+        }
+
     </div>
 </body>
 </html>
-
-
-
 
 
 
